chore: Modify views for notifications system
